# jnet-video-player

./: .gitignore  PROMPT.md  changes.txt  hints.txt
.github/workflows/: build-android.yml
APK/android/: gradle.properties  gradlew  settings.gradle.kts
APK/android/app/: build.gradle.kts  proguard-rules.pro
APK/android/app/src/main/: AndroidManifest.xml
APK/android/app/src/main/java/com/jnet/player/: MainActivity.kt  PlayerViewModel.kt  PlaylistAdapter.kt
APK/android/app/src/main/res/drawable/: bg_playlist_selected.xml
APK/android/app/src/main/res/layout/: activity_main.xml  exo_player_control_view.xml  item_playlist.xml
APK/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
APK/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
APK/android/app/src/main/res/values-night/: themes.xml
C/: CMakeLists.txt  Makefile  README.md  jnet-video  main.c  main.c.bak  main.h  player.c  playlist.c  renderer.c  ui.c
PYTHON/: README.md  jnet-video-player.desktop  jnet-video-player.py  requirements.txt  setup.sh  start.sh
